Observer Design Pattern First Commit

--- a/ObserverDP/ObserverDP.vcxproj
+++ b/ObserverDP/ObserverDP.vcxproj
@@ -83,7 +83,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -145,17 +145,21 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="BrightnessViewer.h" />
+    <ClInclude Include="common.h" />
+    <ClInclude Include="Observer.h" />
+    <ClInclude Include="picture.h" />
+    <ClInclude Include="SaturationViewer.h" />
+    <ClInclude Include="subject.h" />
+    <ClInclude Include="ToneViewer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ObserverDP.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="BrightnessViewer.cpp" />
+    <ClCompile Include="Demo.cpp" />
+    <ClCompile Include="Picture.cpp" />
+    <ClCompile Include="SaturationViewer.cpp" />
+    <ClCompile Include="subject.cpp" />
+    <ClCompile Include="ToneViewer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
